// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepperBullet matches snaphnot when neither index nor active index are 0 and they are not the same 1`] = `
<span
  className="amp-stepper__bullet amp-stepper__bullet--check"
>
  <svg
    fill="none"
    height="21"
    viewBox="0 0 20 21"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="12"
      id="mask-1"
      mask-type="alpha"
      maskUnits="userSpaceOnUse"
      width="16"
      x="2"
      y="5"
    >
      <path
        d="M7.32923 14.137L3.85423 10.662L2.6709 11.837L7.32923 16.4953L17.3292 6.49531L16.1542 5.32031L7.32923 14.137Z"
        fill="white"
      />
    </mask>
    <g
      mask="url(#mask-1)"
    >
      <rect
        fill="white"
        height="20"
        width="20"
        y="0.90625"
      />
    </g>
  </svg>
</span>
`;

exports[`StepperBullet matches snapshot when index and active index are 0 1`] = `
<span
  className="amp-stepper__bullet amp-stepper__bullet--dot"
>
  <span />
</span>
`;

exports[`StepperBullet matches snapshot when index is 0 and active index is something else 1`] = `
<span
  className="amp-stepper__bullet amp-stepper__bullet--check"
>
  <svg
    fill="none"
    height="21"
    viewBox="0 0 20 21"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <mask
      height="12"
      id="mask-0"
      mask-type="alpha"
      maskUnits="userSpaceOnUse"
      width="16"
      x="2"
      y="5"
    >
      <path
        d="M7.32923 14.137L3.85423 10.662L2.6709 11.837L7.32923 16.4953L17.3292 6.49531L16.1542 5.32031L7.32923 14.137Z"
        fill="white"
      />
    </mask>
    <g
      mask="url(#mask-0)"
    >
      <rect
        fill="white"
        height="20"
        width="20"
        y="0.90625"
      />
    </g>
  </svg>
</span>
`;

exports[`StepperBullet matches snapshot when neither index nor active index are 0 but they are the same 1`] = `
<span
  className="amp-stepper__bullet amp-stepper__bullet--dot"
>
  <span />
</span>
`;
